--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
     {% block extra_js %}
     {% endblock %}
 
-    <title>Chocelegance {% extra_title %}{% endblock %}</title>
+    <title>Chocelegance {% block extra_title %}{% endblock %}</title>
   </head>
   <body>
 
