--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,12 @@
+<!-- base.html is the main base template that will be extended to other templates throughout the application -->
+
 {% load static %}
 
 <!doctype html>
 <html lang="en">
   <head>
 
-    <!-- This will serve as the core meta -->
+    <!-- This block will serve as the core meta -->
     {% block meta %}
     <meta http-equivalent="X-UA-Compatible" content="ie=edge">
     <meta charset="utf-8">
@@ -15,7 +17,7 @@
     {% endblock %}
 
 
-    <!-- This will serve as the core css -->
+    <!-- This block will serve as the core css -->
     {% block corecss %}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     {% endblock %}
@@ -24,7 +26,7 @@
     {% endblock %}
 
 
-    <!-- This will serve as the core js -->
+    <!-- This block will serve as the core js -->
     {% block corejs %}
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
@@ -35,10 +37,11 @@
     {% endblock %}
 
     <title>Chocelegance {% block extra_title %}{% endblock %}</title>
+
   </head>
   <body>
 
-    <!-- Page header sticks to top of page -->
+    <!-- Main Page header sticks to top of page -->
     <header class="container-fluid-top"></header>
 
     <!-- Used to display messages from Django if any exist -->
@@ -48,20 +51,20 @@
     </div>
     {% endif %}
 
-    <!-- Additional header below main header -->
+    <!-- Additional sub-header block below main header -->
     {% block page_header %}
+
     {% endblock %}
 
     <!-- Main content for the page will be displayed in the block below -->
     {% block content %}
+
     {% endblock %}
 
-    <!-- Additional JS  -->
+    <!-- Block for additional JS when required -->
     {% block postloadjs %}
+
     {% endblock %}
-
-
-
 
   </body>
 </html>
