--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,6 +1,30 @@
+<!-- This template is extended from the main base.html file located in the root templates directory -->
 {% extends "base.html" %}
 {% load static %}
 
+<!-- The block content below is injected into the main base.html template -->
 {% block content %}
-<h1 class="display-4 text-success">It's working!</h1>
+<div class="container h-100">
+    <div class="row h-100">
+
+        <!-- Hero text overlay -->
+        <div class="col-10 col-md-8 my-auto">
+            <h1 class="display-2 logo-font text-black">
+                It's time to <strong>treat*</strong> yourself!
+            </h1>
+            <br>
+            <br>
+            <h2 class="display-4 logo-font text-black">
+                <strong>*Guaranteed guilt free</strong>
+            </h2>
+
+
+
+
+
+
+        </div>
+
+    </div>
+</div>
 {% endblock %}
