Add treat yourself now button to index.html

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -18,6 +18,11 @@
                 <strong>*Guaranteed guilt free</strong>
             </h2>
 
+            <!-- Treat yourself now button -->
+            <h4>
+                <a href="" class="shop-now-button btn btn-success btn-lg rounded-1 py-3">Treat Yourself Now!</a>
+            </h4>
+
 
 
 
