--- a/templates/base.html
+++ b/templates/base.html
@@ -4,67 +4,94 @@
 
 <!doctype html>
 <html lang="en">
-  <head>
 
-    <!-- This block will serve as the core meta -->
-    {% block meta %}
-    <meta http-equivalent="X-UA-Compatible" content="ie=edge">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    {% endblock %}
+<head>
 
-    {% block extra_meta %}
-    {% endblock %}
+  <!-- This block will serve as the core meta -->
+  {% block meta %}
+  <meta http-equivalent="X-UA-Compatible" content="ie=edge">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  {% endblock %}
 
-
-    <!-- This block will serve as the core css -->
-    {% block corecss %}
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    {% endblock %}
-
-    {% block extra_css %}
-    {% endblock %}
+  {% block extra_meta %}
+  {% endblock %}
 
 
-    <!-- This block will serve as the core js -->
-    {% block corejs %}
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    {% endblock %}
+  <!-- This block will serve as the core css -->
+  {% block corecss %}
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  {% endblock %}
 
-    {% block extra_js %}
-    {% endblock %}
+  {% block extra_css %}
+  {% endblock %}
 
-    <title>Chocelegance {% block extra_title %}{% endblock %}</title>
 
-  </head>
-  <body>
+  <!-- This block will serve as the core js -->
+  {% block corejs %}
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+  </script>
+  {% endblock %}
 
-    <!-- Main Page header sticks to top of page -->
-    <header class="container-fluid-top"></header>
+  {% block extra_js %}
+  {% endblock %}
 
-    <!-- Used to display messages from Django if any exist -->
-    {% if messages %}
-    <div class="message-container">
+  <title>Chocelegance {% block extra_title %}{% endblock %}</title>
+
+</head>
+
+<body>
+
+  <!-- Main Page header sticks to top of page, contains logo and shopping cart links -->
+  <header class="container-fluid-top">
+
+    <div class="row">
+
+      <!-- Logo -->
+      <div class="col-12 col-lg-4 my-auto py-2 py-lg-0 text-center text-lg-left">
+        <a href="{% url 'home' %}" class="nav-link main-logo-link">
+          <h2 class="logo-font text-black my-1"><strong>Chocelegance</strong></h2>
+        </a>
+      </div>
+
+
+
+      <div class="col-12 col-lg-4">
+
+      </div>
 
     </div>
-    {% endif %}
+  </header>
 
-    <!-- Additional sub-header block below main header -->
-    {% block page_header %}
+  <!-- Used to display messages from Django if any exist -->
+  {% if messages %}
+  <div class="message-container">
 
-    {% endblock %}
+  </div>
+  {% endif %}
 
-    <!-- Main content for the page will be displayed in the block below -->
-    {% block content %}
+  <!-- Additional sub-header block below main header -->
+  {% block page_header %}
 
-    {% endblock %}
+  {% endblock %}
 
-    <!-- Block for additional JS when required -->
-    {% block postloadjs %}
+  <!-- Main content for the page will be displayed in the block below -->
+  {% block content %}
 
-    {% endblock %}
+  {% endblock %}
 
-  </body>
+  <!-- Block for additional JS when required -->
+  {% block postloadjs %}
+
+  {% endblock %}
+
+</body>
+
 </html>
