Add shopping cart and account container to index.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,7 @@
 
 <body>
 
-  <!-- Main Page header sticks to top of page, contains logo and shopping cart links -->
+  <!-- Main Page header sticks to top of page, contains logo, search form and shopping cart links -->
   <header class="container-fluid-top">
 
     <div class="row">
@@ -79,9 +79,12 @@
       </div>
 
 
-
-      <div class="col-12 col-lg-4">
-
+      <!-- Shopping cart and account container-->
+      <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+        <ul class="list-inline list-unstyled text-center text-lg-right-my-1">
+          <li class="list-inline-item dropdown"></li>
+          <li class="list-inline-item"></li>
+        </ul>
       </div>
 
     </div>
