Add id and bootstrap class to navbad in base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -50,9 +50,9 @@
 <body>
 
   <!-- Main Page header sticks to top of page, contains logo, search form and shopping cart links -->
-  <header class="container-fluid-top">
+  <header class="container-fluid fixed-top">
 
-    <div class="row">
+    <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
 
       <!-- Logo -->
       <div class="col-12 col-lg-4 my-auto py-2 py-lg-0 text-center text-lg-left">
