--- a/static/css/base.css
+++ b/static/css/base.css
@@ -2,8 +2,10 @@ html {
     height: 100%;
 }
 
+
+/* Need to adjust the hero image using the rules below */
 body {
-    background: url('/media/chocelegance-hero-image.webp') no-repeat center center fixed;
+    background: url('/media/hero-image-final.webp') no-repeat center center fixed;
     background-size: cover;
     height: calc(100vh - 164px);
     color: #555;
