--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
   </script>
-  
+
   {% endblock %}
 
   {% block extra_js %}
@@ -60,7 +60,7 @@
 
   <!-- Main Page header sticks to top of page, contains logo, search form and shopping cart links -->
   <header class="container-fluid fixed-top">
-
+    <!-- Top navbar -->
     <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
 
       <!-- Logo -->
@@ -91,7 +91,7 @@
       <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
         <ul class="list-inline list-unstyled text-center text-lg-right-my-1">
 
-          <!-- Account log in -->
+          <!-- My Account -->
           <li class="list-inline-item dropdown">
             <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true"
               aria-expanded="false">
@@ -101,6 +101,7 @@
               </div>
             </a>
 
+            <!-- Account log in dtl logic -->
             <div class="dropdown-menu border-0" aria-labelledby="user-options">
               {% if request.user.is_authenticated %}
               {% if request.user.is_superuser %}
@@ -135,6 +136,20 @@
       </div>
 
     </div>
+
+    <!-- Sub navbar -->
+    <div class="row bg-white">
+      <nav class="navbar navbar-expand-lg navbar-light w-100">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav"
+          aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        {% include 'includes/mobile-top-header.html' %}
+        {% include 'includes/main-nav.html' %}
+      </nav>
+    </div>
+
+
   </header>
 
   <!-- Used to display messages from Django if any exist -->
