--- a/templates/base.html
+++ b/templates/base.html
@@ -137,7 +137,7 @@
 
     </div>
 
-    <!-- Sub navbar -->
+    <!-- Sub navbar, this used dtl tags to include the navigation html snippets from the includes folder -->
     <div class="row bg-white">
       <nav class="navbar navbar-expand-lg navbar-light w-100">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav"
@@ -149,6 +149,13 @@
       </nav>
     </div>
 
+    <!-- Free Shipping banner -->
+    <div id="delivery-banner" class="row text-center">
+      <div class="col bg-black text-white">
+          <h4 class="logo-font my-1">Free delivery on orders over ${{ free_shipping_threshold }}!</h4>                
+      </div>     
+             
+  </div>
 
   </header>
 
