Add col-8 and mx-auto classes to header in base.html

--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -1,4 +1,4 @@
-<!-- This html file includes 3 list items to be used on the mobile navbar -->
+<!-- This html file includes 3 list items to be used on the mobile version of the navbar -->
 
 
 <!-- This list item provides a button to open the search bar -->
