--- a/static/css/base.css
+++ b/static/css/base.css
@@ -68,6 +68,9 @@ body {
     border: 1px solid black !important;
 }
 
+.bg-black {
+    background: #c71585 !important;
+}
 
 /* -------------------------------- Media Queries ------------------------------- */
 
