--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,7 @@
 <body>
 
   <!-- Main Page header sticks to top of page, contains logo, search form and shopping cart links -->
-  <header class="container-fluid fixed-top">
+  <header class="container-fluid fixed-top col-8 mx-auto">
     <!-- Top navbar -->
     <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
 
@@ -152,9 +152,9 @@
     <!-- Free Shipping banner -->
     <div id="delivery-banner" class="row text-center">
       <div class="col bg-black text-white">
-          <h4 class="logo-font my-1">Free delivery on orders over ${{ free_shipping_threshold }}!</h4>                
+          <h4 class="logo-font my-1">Free delivery on orders over €{{ free_shipping_threshold }}!</h4>                
       </div>     
-             
+
   </div>
 
   </header>
