--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -4,7 +4,7 @@
 
 <!-- Additional sub-header block below main header, extended from base.html -->
 {% block page_header %}
-    <div class="container header-container">
+    <div class="container header-container col-8 mx-auto">
         <div class="row">
             <div class="col">
                 
@@ -16,11 +16,11 @@
 
 <!-- The block content below is injected into the main base.html template -->
 {% block content %}
-<div class="container h-100">
-    <div class="row h-100">
+<div class="container h-100 col-8 mx-auto">
+    <div class="row h-100 col-8 mx-auto">
 
         <!-- Hero text overlay -->
-        <div class="col-10 col-md-8 my-auto">
+        <div class="col-8 my-auto">
             <h1 class="display-2 logo-font text-black">
                 It's time to <strong>treat*</strong> yourself!
             </h1>
