Move chocolates.html to correct directory

--- a/chocolates/templates/chocolates/chocolates.html
+++ b/chocolates/templates/chocolates/chocolates.html
@@ -19,7 +19,7 @@
 <div class="container col-8 mx-auto">
     <div class="row">
         <div class="col">
-            
+            {{ chocolates }}
         </div>
     </div>
 </div>
