Add style rule for background on chocolates.html

--- a/chocolates/templates/chocolates/chocolates.html
+++ b/chocolates/templates/chocolates/chocolates.html
@@ -16,11 +16,13 @@
 
 <!-- The block content below is injected into the main base.html template -->
 {% block content %}
+<div class="overlay">
 <div class="container col-8 mx-auto">
     <div class="row">
         <div class="col">
             {{ chocolates }}
         </div>
     </div>
+</div>
 </div>
 {% endblock %}
