--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -33,7 +33,7 @@
             <!-- Treat yourself now button -->
             <div class="my-5">
                 <h4>
-                    <a href="" class="shop-now-button btn btn-success btn-lg rounded-1 py-3">Treat Yourself Now!</a>
+                    <a href="{% url 'chocolates' %}" class="shop-now-button btn btn-success btn-lg rounded-1 py-3">Treat Yourself Now!</a>
                 </h4>
             </div>
 
