Add chocolate_detail view to chocolates app

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -30,7 +30,7 @@
                 <strong>*Guaranteed guilt free</strong>
             </h2>
 
-            <!-- Treat yourself now button -->
+            <!-- Treat yourself now button, links to all chocolates -->
             <div class="my-5">
                 <h4>
                     <a href="{% url 'chocolates' %}" class="shop-now-button btn btn-success btn-lg rounded-1 py-3">Treat Yourself Now!</a>
