--- a/chocolates/templates/chocolates/chocolate_detail.html
+++ b/chocolates/templates/chocolates/chocolate_detail.html
@@ -28,19 +28,30 @@
         <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
             <div class="image-container my-5">
                 {% if chocolate.choc_image %}
-                    <a href="{{ chocolate.image.url }}" target="_blank">
-                        <img class="card-img-top img-fluid rounded-2" src="{{ chocolate.choc_image.url }}" alt="{{ chocolate.choc_name }}">
-                    </a>
-                    {% else %}
-                    <a href="">
-                        <img class="card-img-top img-fluid rounded-2" src="{{ MEDIA_URL }}noimage.webp" alt="{{ chocolate.choc_name }}">
-                    </a>
-                    {% endif %}
+                <a href="{{ chocolate.image.url }}" target="_blank">
+                    <img class="card-img-top img-fluid rounded-2" src="{{ chocolate.choc_image.url }}"
+                        alt="{{ chocolate.choc_name }}">
+                </a>
+                {% else %}
+                <a href="">
+                    <img class="card-img-top img-fluid rounded-2" src="{{ MEDIA_URL }}noimage.webp"
+                        alt="{{ chocolate.choc_name }}">
+                </a>
+                {% endif %}
             </div>
         </div>
 
         <div class="col-12 col-md-6 col-lg-4">
-
+            <div class="product-details-container mb-5 mt-md-5">
+                <p class="mb-0">{{ chocolate.choc_name }}</p>
+                <p class="lead mb-0 text-left font-weight-bold">${{ chocolate.choc_price }}</p>
+                {% if chocolate.choc_rating %}
+                <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ chocolate.choc_rating }} / 5</small>
+                {% else %}
+                <small class="text-muted">No Rating</small>
+                {% endif %}
+                <p class="mt-3">{{ chocolate.choc_description }}</p>
+            </div>
         </div>
 
     </div>
