Add style rule to increase padding below navbar when displayed on mobile

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -107,4 +107,13 @@ body {
     }
 }
 
+/* padding below navbar when collapsed on mobile */
+@media (max-width: 991px) {
+    .header-container {
+        padding-top: 180px;
+    }
 
+    body {
+        height: calc(100vh -116px);
+    }
+}
