--- a/chocolates/templates/chocolates/chocolate_detail.html
+++ b/chocolates/templates/chocolates/chocolate_detail.html
@@ -29,7 +29,7 @@
         <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
             <div class="image-container my-5">
                 {% if chocolate.choc_image %}
-                <a href="{{ chocolate.chco_image.url }}" target="_blank">
+                <a href="{{ chocolate.choc_image.url }}" target="_blank">
                     <img class="card-img-top img-fluid rounded-2" src="{{ chocolate.choc_image.url }}"
                         alt="{{ chocolate.choc_name }}">
                 </a>
