Add style rule for delivery banner in base.css

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -69,7 +69,7 @@ body {
 }
 
 .bg-black {
-    background: #c71585 !important;
+    background: #000 !important
 }
 
 
@@ -81,6 +81,23 @@ body {
     position: fixed;
     background: white;
     z-index: -1;
+}
+
+#delivery-banner {
+    border-radius: 5px;
+    /* Background gradient effect generated from cssgradient.io */
+    background: rgb(237,130,237);
+    background: -moz-linear-gradient(153deg, rgba(237,130,237,1) 0%, rgba(199,21,128,1) 22%, rgba(199,21,128,1) 82%, rgba(237,130,237,1) 100%);
+    background: -webkit-linear-gradient(153deg, rgba(237,130,237,1) 0%, rgba(199,21,128,1) 22%, rgba(199,21,128,1) 82%, rgba(237,130,237,1) 100%);
+    background: linear-gradient(153deg, rgba(237,130,237,1) 0%, rgba(199,21,128,1) 22%, rgba(199,21,128,1) 82%, rgba(237,130,237,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ed82ed",endColorstr="#ed82ed",GradientType=1); 
+    padding-top: .2rem;
+    padding-bottom: .2rem;
+    text-transform: uppercase;
+    font-weight: 100;
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0;
 }
 
 /* -------------------------------- Media Queries ------------------------------- */
