--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,7 @@
 <body>
 
   <!-- Main Page header sticks to top of page, contains logo, search form and shopping cart links -->
-  <header class="container-fluid fixed-top col-8 mx-auto">
+  <header class="container-fluid fixed-top col-8">
     <!-- Top navbar -->
     <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
 
@@ -150,9 +150,9 @@
     </div>
 
     <!-- Free Shipping banner -->
-    <div id="delivery-banner" class="row text-center rounded-2">
-      <div class="col bg-black text-white rounded-2 mt-1">
-        <h4 class="logo-font my-1">Free delivery on orders over €{{ free_shipping_threshold }}!</h4>
+    <div id="delivery-banner" class="text-center">
+      <div class="col text-white mt-1">
+        <h4 class="my-1">Free delivery on orders over €{{ free_shipping_threshold }}!</h4>
       </div>
     </div>
 
