--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -22,7 +22,7 @@
                 Clothing
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
-                <a href="" class="dropdown-item">Activewear &amp; Essentials</a>
+                <a href="{% url 'chocolates' %}?choc_category=milk chocololate" class="dropdown-item">Activewear &amp; Essentials</a>
                 <a href="" class="dropdown-item">Jeans</a>
                 <a href="" class="dropdown-item">Shirts</a>
                 <a href="" class="dropdown-item">All Clothing</a>
