--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -19,13 +19,13 @@
         <!-- Clothing drop down menu -->
         <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="clothing-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Clothing
+                Keto
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
-                <a href="{% url 'chocolates' %}?choc_category=milk chocololate" class="dropdown-item">Activewear &amp; Essentials</a>
-                <a href="" class="dropdown-item">Jeans</a>
-                <a href="" class="dropdown-item">Shirts</a>
-                <a href="" class="dropdown-item">All Clothing</a>
+                <a href="{% url 'chocolates' %}?choc_category=dark_choc" class="dropdown-item">Dark Chocolate</a>
+                <a href="{% url 'chocolates' %}?choc_category=milk_choc" class="dropdown-item">Milk Chocolate</a>
+                <a href="{% url 'chocolates' %}?choc_category=white_choc" class="dropdown-item">White Chocolate</a>
+                <a href="{% url 'chocolates' %}?choc_category=dark_choc,milk_choc,white_choc" class="dropdown-item">All Keto Chocolate</a>
             </div>
         </li>
 
