Update keto menu urls on main-nav.html

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -22,10 +22,10 @@
                 Keto
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
-                <a href="{% url 'chocolates' %}?choc_category=dark_choc" class="dropdown-item">Dark Chocolate</a>
-                <a href="{% url 'chocolates' %}?choc_category=milk_choc" class="dropdown-item">Milk Chocolate</a>
-                <a href="{% url 'chocolates' %}?choc_category=white_choc" class="dropdown-item">White Chocolate</a>
-                <a href="{% url 'chocolates' %}?choc_category=dark_choc,milk_choc,white_choc" class="dropdown-item">All Keto Chocolate</a>
+                <a href="{% url 'chocolates' %}?choc_category_display=dark_choc" class="dropdown-item">Dark Chocolate</a>
+                <a href="{% url 'chocolates' %}?choc_category_display=milk_choc" class="dropdown-item">Milk Chocolate</a>
+                <a href="{% url 'chocolates' %}?choc_category_display=white_choc" class="dropdown-item">White Chocolate</a>
+                <a href="{% url 'chocolates' %}?choc_category_display=dark_choc,milk_choc,white_choc" class="dropdown-item">All Keto Chocolate</a>
             </div>
         </li>
 
