--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -16,12 +16,12 @@
             </div>
         </li>
 
-        <!-- Clothing drop down menu -->
+        <!-- Keto chocolate drop down menu -->
         <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="clothing-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Keto
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
+            <div class="dropdown-menu border-0" aria-labelledby="keto-chocolate-link">
                 <a href="{% url 'chocolates' %}?choc_category_display=dark_choc" class="dropdown-item">Dark Chocolate</a>
                 <a href="{% url 'chocolates' %}?choc_category_display=milk_choc" class="dropdown-item">Milk Chocolate</a>
                 <a href="{% url 'chocolates' %}?choc_category_display=white_choc" class="dropdown-item">White Chocolate</a>
@@ -29,19 +29,33 @@
             </div>
         </li>
 
-        <!-- Homeware drop down menu -->
+        <!-- Vegan chocolate drop down menu -->
         <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="homeware-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Homeware
+                Vegan
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="homeware-link">
-                <a href="" class="dropdown-item">Bed &amp; Bath</a>
-                <a href="" class="dropdown-item">Kitchen &amp; Dining</a>
-                <a href="" class="dropdown-item">All Homeware</a>
+            <div class="dropdown-menu border-0" aria-labelledby="keto-chocolate-link">
+                <a href="{% url 'chocolates' %}?choc_category_display=dark_choc" class="dropdown-item">Dark Chocolate</a>
+                <a href="{% url 'chocolates' %}?choc_category_display=milk_choc" class="dropdown-item">Milk Chocolate</a>
+                <a href="{% url 'chocolates' %}?choc_category_display=white_choc" class="dropdown-item">White Chocolate</a>
+                <a href="{% url 'chocolates' %}?choc_category_display=dark_choc,milk_choc,white_choc" class="dropdown-item">All Vegan Chocolate</a>
             </div>
         </li>
 
-        <!-- Special drop down menu -->
+        <!-- Gluten-free chocolate drop down menu -->
+        <li class="nav-item dropdown">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="homeware-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Gluten-Free
+            </a>
+            <div class="dropdown-menu border-0" aria-labelledby="keto-chocolate-link">
+                <a href="{% url 'chocolates' %}?choc_category_display=dark_choc" class="dropdown-item">Dark Chocolate</a>
+                <a href="{% url 'chocolates' %}?choc_category_display=milk_choc" class="dropdown-item">Milk Chocolate</a>
+                <a href="{% url 'chocolates' %}?choc_category_display=white_choc" class="dropdown-item">White Chocolate</a>
+                <a href="{% url 'chocolates' %}?choc_category_display=dark_choc,milk_choc,white_choc" class="dropdown-item">All Gluten-Free Chocolate</a>
+            </div>
+        </li>
+
+        <!-- Special Offers drop down menu -->
         <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-black" href="#" id="specials-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Special Offers
