Add sort by price to main-nav.html

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -98,6 +98,7 @@ body {
     width: 100%;
     margin-left: 0;
     margin-right: 0;
+    border: 1px solid #551b8c;
 }
 
 /* -------------------------------- Media Queries ------------------------------- */
