--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -6,10 +6,10 @@
         <!-- All Products drop down menu -->
         <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="all-products-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                All Products
+                All Chocolates
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
-                <a href="" class="dropdown-item">By Price</a>
+                <a href="{% url 'chocolates'%}?sort=choc_price&direction=asc" class="dropdown-item">By Price</a>
                 <a href="" class="dropdown-item ">By Rating</a>
                 <a href="" class="dropdown-item ">By Category</a>
                 <a href="{% url 'chocolates' %}" class="dropdown-item">All Products</a>
