--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -10,7 +10,7 @@
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
                 <a href="{% url 'chocolates'%}?sort=choc_price&direction=asc" class="dropdown-item">By Price</a>
-                <a href="{% url 'chocolates'%}?sort=choc_rating&direction=asc" class="dropdown-item ">By Rating</a>
+                <a href="{% url 'chocolates'%}?sort=choc_rating&direction=desc" class="dropdown-item ">By Rating</a>
                 <a href="{% url 'chocolates'%}?sort=choc_category_display&direction=asc" class="dropdown-item ">By Category</a>
                 <a href="{% url 'chocolates' %}" class="dropdown-item">All Products</a>
             </div>
