--- a/chocolates/templates/chocolates/chocolate_detail.html
+++ b/chocolates/templates/chocolates/chocolate_detail.html
@@ -58,6 +58,15 @@
                 </p>
                 {% endif %}
 
+                <!-- Displays the diet type below the category (e.g Keto, Vegan, Gluten-Free etc) -->
+                {% if chocolate.choc_dietary_type %}
+                <p class="small mt-1 mb-0">
+                    <a class="text-muted"
+                        href="{% url 'chocolates' %}?category={{ chocolates.choc_dietary_type.dietary_type }}">
+                        <i class="fas fa-tag mr-1"></i>{{ chocolate.choc_dietary_type.diet_friendly_name }}
+                    </a>
+                </p>
+                {% endif %}
 
                 {% if chocolate.choc_rating %}
                 <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ chocolate.choc_rating }} / 5</small>
