--- a/chocolates/templates/chocolates/chocolate_detail.html
+++ b/chocolates/templates/chocolates/chocolate_detail.html
@@ -53,7 +53,7 @@
                 <p class="small mt-1 mb-0">
                     <a class="text-muted"
                         href="{% url 'chocolates' %}?category={{ chocolates.choc_category_display.choc_category_name }}">
-                        <i class="fas fa-tag mr-1"></i>{{ chocolate.choc_category_display.choc_friendly_name }}
+                        <i class="fas fa-tag mr-2"></i>{{ chocolate.choc_category_display.choc_friendly_name }}
                     </a>
                 </p>
                 {% endif %}
@@ -63,13 +63,13 @@
                 <p class="small mt-1 mb-0">
                     <a class="text-muted"
                         href="{% url 'chocolates' %}?category={{ chocolates.choc_dietary_type.dietary_type }}">
-                        <i class="fas fa-tag mr-1"></i>{{ chocolate.choc_dietary_type.diet_friendly_name }}
+                        <i class="fa-solid fa-check text-success mr-2"></i>{{ chocolate.choc_dietary_type.diet_friendly_name }}
                     </a>
                 </p>
                 {% endif %}
 
                 {% if chocolate.choc_rating %}
-                <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ chocolate.choc_rating }} / 5</small>
+                <small class="text-muted"><i class="fas fa-star mr-2 text-warning"></i>{{ chocolate.choc_rating }} / 5</small>
                 {% else %}
                 <small class="text-muted">No Rating</small>
                 {% endif %}
