--- a/chocolates/templates/chocolates/chocolates.html
+++ b/chocolates/templates/chocolates/chocolates.html
@@ -62,9 +62,9 @@
                 <div class="col-12 col-md-6 order-md-first">
                     <p class="text-muted mt-3 text-center text-md-left">
                         {% if search_term or current_categories or current_sorting != 'None_None' %}
-                            <span class="small"><a href="{% url 'chocolates' %}">Reset</a> | </span>
+                            <span class="small"><a href="{% url 'chocolates' %}">Return to Chocolates Home</a> | </span>
                         {% endif %}
-                        {{ chocolates|length }} Chocolate{% if search_term %} found for <strong>"{{ search_term }}"</strong>{% endif %}
+                        {{ chocolates|length }} Result(s){% if search_term %} found for <strong>"{{ search_term }}"</strong>{% endif %}
                     </p>
                 </div>
 
