--- a/chocolates/templates/chocolates/chocolates.html
+++ b/chocolates/templates/chocolates/chocolates.html
@@ -142,7 +142,12 @@
 
         </div>
     </div>
+</div>
 
+<div class="btt-button shadow-sm rounded-0 border border-black">
+    <a class="btt-link d-flex h-100">
+        <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
+    </a>	
 </div>
 
 {% endblock %}
@@ -150,6 +155,13 @@
 
 {% block postloadjs %}
 {{ block.super }}
+
+<script type="text/javascript">
+    $('.btt-link').click(function(e) {
+        window.scrollTo(0,0)
+    })
+</script>
+
 <script type="text/javascript">
     $('#sort-selector').change(function() {
         var selector = $(this);
@@ -177,7 +189,6 @@
                     sort = "choc_category_display";
             }
 
-
             // Breaks the value in the option element into a string seperated by "_" 
             // (e.g value="choc_category_display" will become 3 items 'choc', 'category' and 'display')
             // The 'slice(-1)'' ensures the last index (asc or desc) value is captured
@@ -193,6 +204,7 @@
 
             window.location.replace(currentUrl);
         }
+        // JS code block validated in JS Jint, no errors
     });
 </script>
 {% endblock %}
