--- a/chocolates/templates/chocolates/chocolates.html
+++ b/chocolates/templates/chocolates/chocolates.html
@@ -144,9 +144,9 @@
     </div>
 </div>
 
-<div class="btt-button shadow-sm rounded-0 border border-black">
+<div class="btt-button shadow-sm rounded-2 border border-black">
     <a class="btt-link d-flex h-100">
-        <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
+        <i id="back-to-top-icon" class="fas fa-arrow-up text-black mx-auto my-auto"></i>
     </a>	
 </div>
 
@@ -158,8 +158,8 @@
 
 <script type="text/javascript">
     $('.btt-link').click(function(e) {
-        window.scrollTo(0,0)
-    })
+        window.scrollTo(0,0);
+    });
 </script>
 
 <script type="text/javascript">
